tests/NormalTests/paczka2/big_fuzzy/33598623.err
Error in line 2: LRCIDJ66Fc A309 20,6
Error in line 12: LRCIDJ66Fc S216 122,3
Error in line 8: JRSQ A888 26,0
Error in line 25: 7XTFR1qtZIB S216 24,5
Error in line 33: 7XTFR1qtZIB A888 13,7
Error in line 34: JRSQ A888 213,7
Error in line 39: JRSQ S761 36,5
Error in line 50: dVb8gVIOE4 S761 95,7
Error in line 47: LRCIDJ66Fc S761 89,9
Error in line 66: dVb8gVIOE4 S761 162,9
Error in line 63: Rics7E S216 37,5
Error in line 72: JRSQ S761 3,2
Error in line 73: S216 S761 87,2
Error in line 81: JRSQ S216 198,9
Error in line 87: JRSQ A888 23,4
Error in line 85: haD2MWS S761 14,7
Error in line 97: haD2MWS A888 50,3
Error in line 95: JRSQ S216 39,1
Error in line 120: 7XTFR1qtZIB S761 12,0
Error in line 122: JRSQ A309 26,4
Error in line 124: JRSQ A888 65,2
Error in line 132: haD2MWS A309 -1,1
Error in line 126: JRSQ A309 59,8
Error in line 136: JRSQ S761 74,2
Error in line 138: Rics7E S761 54,8
Error in line 151: S216 S761 205,7
Error in line 155: Rics7E A888 42,1
Error in line 157: S216 A309 81,9
Error in line 125: haD2MWS A309 42,6
Error in line 162: S216 S216 12,7
Error in line 167: JRSQ S216 43,0
Error in line 169: JRSQ A309 11,7
Error in line 160: dVb8gVIOE4 A888 46,3
Error in line 174: haD2MWS A888 51,7
Error in line 168: S216 A888 41,1
Error in line 183: dVb8gVIOE4 A309 82,7
Error in line 186: dVb8gVIOE4 S761 65,5
Error in line 192: JRSQ S761 17,7
Error in line 195: JRSQ S216 82,7
Error in line 226: haD2MWS S216 68,2
Error in line 204: LRCIDJ66Fc A309 68,9
Error in line 230: LRCIDJ66Fc S761 25,6
Error in line 233: haD2MWS A888 19,8
Error in line 235: haD2MWS Aqqq 99,0
Error in line 209: dVb8gVIOE4 S216 223,0
Error in line 234: haD2MWS S216 9,7
